# dir-cache

./: .gitignore  Cargo.toml  Readme.md  Todo.md  clippy.toml  deny.toml
.github/workflow-templates/: dir-cache-ci.yml
.github/workflows/: main.yml
.local/: fuzz.dockerfile
dir-cache/: Cargo.toml  Todo.md
dir-cache/src/: disk.rs  error.rs  lib.rs  manifest.rs  opts.rs  path_util.rs  serde.rs  time.rs
dir-cache/tests/: integration.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_path.rs
