[package]
name = "dir-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
lz4 = ["dep:lz4"]

[dependencies]
lz4 = { version = "1.24.0", optional = true }

[dev-dependencies]
tempdir = "0.3.7"
