[package]
name = "dir-cache-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "MPL-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3.10.0"

[dependencies.dir-cache]
path = "../dir-cache"

[[bin]]
name = "fuzz_path"
path = "fuzz_targets/fuzz_path.rs"
test = false
doc = false
bench = false
